adjusted page layout to accommodate WordPress admin bar
The relevant css used to be in header.sass,
it's now in main.sass

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -131,6 +131,14 @@ hr
 
 // -- COMPONENTS ------------------------------------------
 
+.site-container
+  .admin-bar &
+    position: relative
+    top: 4.6rem
+
+    @include bp('portrait')
+      top: 3.2rem
+
 .page-container
   min-height: 100vh
   position: relative
