--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -41,6 +41,8 @@ $color-dark-transparent: rgba(0,0,0,0.85)
 $color-white: #fff
 $color-transparent: rgba(0,0,0,0)
 $color-nav-block: rgb(208, 234, 242)
+$color-gradient-dark: rgb(0,0,30)
+$color-gradient-light: rgb(51,51,75)
 
 // layout
 $common-spacing: 1.6rem
