ensured mobile nav menu takes into consideration the WordPress admin bar

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -318,6 +318,12 @@
         right: 0
         z-index: 10
 
+        .admin-bar &
+          top: 4.6rem
+
+          @include bp('portrait')
+            top: 3.2rem
+
   &--style-dark
     height: auto
     border: none
