using flex to align page-blocks
footer element is now fixed to the bottom of the page/screen

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -140,9 +140,17 @@ hr
       top: 3.2rem
 
 .page-container
+  display: flex
+  flex-direction: column
+  justify-content: flex-start
   min-height: 100vh
   position: relative
   width: 100%
+
+.page-blocks
+
+.footer
+  margin-top: auto
 
 @import 'components/accordion'
 @import 'components/call-to-action'
