changed job summary style and behaviour
distance block is always displayed even if empty to preserve layout;
border now handled by parent list element;
mi suffix now handled by vue and not css;

--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -1,15 +1,10 @@
 .job-summary
-  border-bottom: .1rem solid $color-light
   font-size: $font-size-small
   line-height: 1.2
-  padding: $common-spacing/2 0
   position: relative
 
   &__distance
-    font-weight: $font-weight-bold
-
-    &-miles:after
-      content: ' mi.'
+    height: 1em
 
     &-time
       color: #cccccc
@@ -21,10 +16,10 @@
     font-weight: $font-weight-bold
     position: absolute
     right: 0
-    top: $common-spacing/2
+    top: 0
 
   &__link
-    bottom: $common-spacing/2
+    bottom: 0
     position: absolute
     right: 0
     text-decoration: underline
