update search page
each marker now has an id composed of its lat and lng;
changeSelectedMarker functionality now called in marker callback function;
format of job JSON feed has changed;
styled selected job vacancy;
on non mobile layouts the vacancies are listed to the left of the map;
vacancies list is scrollable;
clicking a vacancy highlights the corresponding maker on the map;
clicking a marker highlights the corresponding vacancy;
searchResults.postCode -> searchResults.searchTerm;
changed default map zoom level: 9 -> 6
changed default map center;
calculating distance between two points manually using lat lng - not via google distance matrix api;
sorting search results using manual comparison function so vue knows to update order of vacancy list when search term changes;
search term marker position changes if the search term changes;

--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -4,7 +4,7 @@
   position: relative
 
   &__distance
-    height: 1em
+    height: 1.3em
 
     &-time
       color: #cccccc
@@ -27,3 +27,17 @@
 
   &__prison-name > a
     text-decoration: underline
+
+  &--selected
+
+    &:before
+      background-color: $color-secondary
+      border-radius: $common-spacing
+      content: ' '
+      display: block
+      height: 100%
+      width: $common-spacing / 2
+      position: absolute
+      left: - $common-spacing
+      top: 0
+      bottom: 0
