--- a/web/app/themes/ppj/src/sass/utilities/_top-border.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_top-border.sass
@@ -11,7 +11,8 @@
     display: block
     height: .2rem
     position: relative
-    margin: inherit
+    margin-left: inherit
+    margin-right: inherit
     width: 2.5em
 
     @include bp('portrait')
