search button is disabled if there is no search text; search field border is blue when the search field has focus;

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -54,7 +54,7 @@
     transition: $main-transition-duration
     width: 100%
 
-    &--in-use
+    &:focus
       border-color: $color-main
 
   &__button-search
