--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -30,6 +30,9 @@
     text-decoration: underline
     transition: $main-transition-duration
 
+    &-button
+      display: flex
+
     @include bp('portrait')
       justify-content: center
 
