--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -13,6 +13,7 @@ $font-weight-bold: 600
 $font-weight-very-bold: 700
 
 $font-size-tiny: 1.1rem
+$font-size-quite-tiny: 1.2rem
 $font-size-small: 1.6rem
 $font-size-medium: 1.8rem
 $font-size-large-medium: 2rem
