geolocation button text is now purple when geolocation is being used
created geoLocationIsActive flag to control styling changes;
no longer displaying lat lng coords in search bar when using geolocation;

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -23,6 +23,7 @@
       width: 40rem
 
   &__geolocation
+    $gl: &
     display: flex
     font-size: $font-size-small
     font-weight: $font-weight-bold
@@ -44,6 +45,13 @@
 
     &--is-busy
       opacity: 0.5
+
+    &--is-active
+      #{$gl}-icon
+        fill: purple
+
+      #{$gl}-button
+        color: purple
 
   &__input
     border: .2rem solid $color-light
