--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -184,27 +184,48 @@
       cursor: pointer
       padding: $common-spacing/2 $common-spacing
 
+      // FADING:
+      // https://codepen.io/anon/pen/opBRLp
+
       &:first-child
         border-top: none
+        @include bp('portrait')
+          position: relative
+          z-index: 2
 
       &:last-child
         @include bp('portrait')
           position: relative
 
-      // https://codepen.io/anon/pen/opBRLp
+      &:nth-child(2):before,
       &:nth-last-child(2):after
         @include bp('portrait')
-          background: linear-gradient(to top, $color-white, $color-transparent)
-          bottom: 0
           content: ''
           display: block
           height: $common-spacing * 5
           left: 0
+          pointer-events: none
           position: absolute
           right: 0
 
+      &:nth-child(2):before
+        @include bp('portrait')
+          background: linear-gradient(to bottom, $color-white, $color-transparent)
+          top: 0
+          z-index: 1
+
+      &:nth-last-child(2):after
+        @include bp('portrait')
+          background: linear-gradient(to top, $color-white, $color-transparent)
+          bottom: 0
+
+      &:hover:nth-child(2):before
+        @include bp('portrait')
+          cursor: n-resize
+
       &:hover:nth-last-child(2):after
-        cursor: s-resize
+        @include bp('portrait')
+          cursor: s-resize
 
   &__square-box
     @include bp('portrait')
