gradient for header now has an angle of 60 degrees

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -334,4 +334,4 @@
     .header
       &__site-header
         background-color: $color-dark
-        background: linear-gradient(to bottom left, $color-gradient-dark, $color-gradient-light)
+        background: linear-gradient(60deg, $color-gradient-light, $color-gradient-dark)
