--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -290,18 +290,23 @@
   &__text
     @include u-top-border('large', 'light')
     color: $color-white
-    font-size: $font-size-very-large
-    line-height: 1.3em
+    font-size: 2.6rem
+    line-height: 3rem
 
     &, & > p
       font-weight: $font-weight-bold
 
     @include bp('portrait')
-      font-size: $font-size-huge
-      line-height: 1.2em
+      font-size: 4.2rem
+      line-height: 4.8rem
 
     @include bp('landscape')
-      font-size: $font-size-gigantic
+      font-size: 5rem
+      line-height: 5.6rem
+
+    @include bp('large')
+      font-size: 7.2rem
+      line-height: 8.2rem
 
   &__subtext
     color: $color-white
