--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -310,14 +310,21 @@
 
   &__subtext
     color: $color-white
-    font-size: $font-size-large
+    font-size: 2.2rem
+    line-height: 2.8rem
     margin-top: .5em
 
     @include bp('portrait')
-      font-size: $font-size-fairly-huge
+      font-size: 3.4rem
+      line-height: 4rem
 
     @include bp('landscape')
-      font-size: $font-size-really-huge
+      font-size: 4rem
+      line-height: 4.6rem
+
+    @include bp('large')
+      font-size: 5.4rem
+      line-height: 6.6rem
 
   &--nav-menu-open
     .header
