--- a/web/app/themes/ppj/src/sass/components/triple-text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/triple-text-block.sass
@@ -19,7 +19,7 @@
 
   &__text-block
     $border: .2rem solid $color-very-light
-    align-items: flex-start
+    align-items: flex-end
     border-bottom: .2rem solid $color-very-light
     display: flex
     flex-direction: row
@@ -67,14 +67,24 @@
 
   &__icon-text
     color: $color-tertiary
-    font-size: $font-size-enormous
+    font-size: 3rem
     font-weight: $font-weight-very-bold
-    line-height: 1
+    line-height: 3.4rem
     position: relative
     top: -.7rem
 
     @include bp('portrait')
+      font-size: 2.8rem
+      line-height: 3.4rem
       text-align: center
+
+    @include bp('landscape')
+      font-size: 3.6rem
+      line-height: 4.4rem
+
+    @include bp('large')
+      font-size: 5.2rem
+      line-height: 6rem
 
   &__content
     & a
