fixed layout of stat text in triple text block

--- a/web/app/themes/ppj/src/sass/components/triple-text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/triple-text-block.sass
@@ -19,7 +19,7 @@
 
   &__text-block
     $border: .2rem solid $color-very-light
-    align-items: flex-end
+    align-items: flex-start
     border-bottom: .2rem solid $color-very-light
     display: flex
     flex-direction: row
@@ -71,7 +71,6 @@
     font-weight: $font-weight-very-bold
     line-height: 3.4rem
     position: relative
-    top: -.7rem
 
     @include bp('portrait')
       font-size: 2.8rem
