increased the size of the logo

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -272,14 +272,13 @@
     background-position: center center
     background-size: contain
     display: block
-    height: 3.6rem
-    width: 8.4rem
+    height: 4rem // 2.35 ratio
+    width: 9.4rem
     pointer-events: auto
 
-
     @include bp('portrait')
-      height: 5.2rem
-      width: 12rem
+      height: 6.4rem
+      width: 15rem
 
   &__text-container
     margin: 0 $common-spacing
