--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -152,7 +152,18 @@
     text-transform: uppercase
 
     @include bp('portrait')
+      font-size: 2rem
+      line-height: 2.8rem
       margin-top: $common-spacing * 2
       margin-left: auto
       margin-right: auto
       width: 34.4rem
+
+    @include bp('landscape')
+      font-size: 2.4rem
+      line-height: 3rem
+
+    @include bp('large')
+      font-size: 2.8rem
+      line-height: 3.4rem
+
