--- a/web/app/themes/ppj/src/sass/components/triple-text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/triple-text-block.sass
@@ -86,6 +86,21 @@
       line-height: 6rem
 
   &__content
+    font-size: 1.6rem
+    line-height: 2.2rem
+
+    @include bp('portrait')
+      font-size: 1.8rem
+      line-height: 2.4rem
+
+    @include bp('landscape')
+      font-size: 2.4rem
+      line-height: 3.2rem
+
+    @include bp('large')
+      font-size: 2.8rem
+      line-height: 3.8rem
+
     & a
       text-decoration: underline
 
