--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -30,9 +30,20 @@
     font-size: $font-size-small
 
   &__content
+    font-size: 1.6rem
+    line-height: 2.2rem
+
+    @include bp('portrait')
+      font-size: 1.8rem
+      line-height: 2.4rem
+
+    @include bp('landscape')
+      font-size: 2.4rem
+      line-height: 3.2rem
 
     @include bp('large')
-      font-size: $font-size-really-very-large
+      font-size: 2.8rem
+      line-height: 3.8rem
 
     img
       width: 100%
@@ -56,9 +67,6 @@
 
     p
       margin-bottom: $common-spacing
-      //margin-right: $common-spacing/2
-      //padding-right: $common-spacing
-      line-height: 1.3em
 
     a
       text-decoration: underline
