--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -127,8 +127,21 @@
       font-size: $font-size-almost-huge
 
   &__quote-content
+    font-size: 2rem
+    line-height: 2.6rem
     font-weight: $font-weight-bold
-    line-height: 1.3em
+
+    @include bp('portrait')
+      font-size: 2.4rem
+      line-height: 3rem
+
+    @include bp('landscape')
+      font-size: 3rem
+      line-height: 3.8rem
+
+    @include bp('large')
+      font-size: 4rem
+      line-height: 4.8rem
 
   &__quote-mark
     @include background-img('svg/quote_icon.svg')
