--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -153,12 +153,21 @@
   &__quote-source
     color: $color-white
     font-family: $sans-serif
-    font-size: $font-size-medium
+    font-size: 1.6rem
+    line-height: 2.2rem
     margin-top: $common-spacing
 
-    @include bp('large')
-      font-size: $font-size-really-very-large
+    @include bp('portrait')
+      font-size: 1.8rem
+      line-height: 2.4rem
 
+    @include bp('landscape')
+      font-size: 2.4rem
+      line-height: 3.2rem
+
+    @include bp('large')
+      font-size: 2.8rem
+      line-height: 3.8rem
 
   @at-root a#{&}__link // https://stackoverflow.com/questions/17268051/sass-combining-parent-using-ampersand-with-base-element
     background-color: $color-main
