styled CTA font size for mobiles

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -174,7 +174,9 @@
     border-radius: $common-spacing * 2
     color: $color-white
     display: block
+    font-size: 1.8rem
     font-weight: $font-weight-bold
+    line-height: 2.4rem
     margin: $common-spacing 0 0
     padding: $common-spacing *.8
     text-align: center
