styled the search bar for large devices

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -68,6 +68,10 @@
     @include bp('portrait')
       font-size: $font-size-small
 
+    @include bp('large')
+      height: 5.2rem
+      padding-left: 2rem
+
     &:focus
       border-color: $color-main
 
