--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -202,6 +202,7 @@
 
   &__nav-menu-list-element
     $nmle: &
+    font-size: 1.8rem
     font-weight: $font-weight-bold
     padding: 0 $common-spacing
 
@@ -221,6 +222,9 @@
       line-height: 1
       margin-left: $common-spacing
       padding: 0
+
+    @include bp('large')
+      font-size: 2.4rem
 
     &-text
       display: inline-block
