removed margin from nav menu list for landscape and above

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -198,7 +198,7 @@
 
     @include bp('landscape')
       display: flex
-      margin-top: $common-spacing
+      margin-top: 0
 
   &__nav-menu-list-element
     $nmle: &
