styled accordion font sizes for different breakpoints
also limited width of accordion for different breakpoints

--- a/web/app/themes/ppj/src/sass/components/accordion.sass
+++ b/web/app/themes/ppj/src/sass/components/accordion.sass
@@ -1,8 +1,24 @@
 .accordion
   $c: &
   $border: 1px solid $color-light
-  font-size: $font-size-small
+  font-size: 1.6rem
+  line-height: 2.2rem
   margin: 0 $common-spacing
+
+  @include bp('portrait')
+    font-size: 1.8rem
+    line-height: 2.4rem
+    margin: auto
+    width: 75%
+
+  @include bp('landscape')
+    font-size: 2.4rem
+    line-height: 3.2rem
+
+  @include bp('large')
+    font-size: 2.8rem
+    line-height: 3.8rem
+    width: 66%
 
   &__title
     @extend .common-header
