limited width of the triple text block for different devices

--- a/web/app/themes/ppj/src/sass/components/triple-text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/triple-text-block.sass
@@ -1,6 +1,13 @@
 .triple-text-block
   margin: $common-spacing
 
+  @include bp('portrait')
+    margin: auto
+    width: 75%
+
+  @include bp('large')
+    width: 66%
+
   &__title
     @extend .common-header
 
