--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -55,8 +55,21 @@
 
     & > h4
       font-weight: $font-weight-bold
-      font-size: $font-size-small
+      font-size: 1.8rem
+      line-height: 2.4rem
       margin: 1.8rem 0
+
+      @include bp('portrait')
+        font-size: 2rem
+        line-height: 2.6rem
+
+      @include bp('landscape')
+        font-size: 2.6rem
+        line-height: 3.4rem
+
+      @include bp('large')
+        font-size: 3rem
+        line-height: 4rem
 
     & li
       margin: $common-spacing/2 0
