--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -32,7 +32,20 @@
 
   &__subtitle
     font-weight: $font-weight-bold
-    font-size: $font-size-small
+    font-size: 1.8rem
+    line-height: 2.4rem
+
+    @include bp('portrait')
+      font-size: 2rem
+      line-height: 2.6rem
+
+    @include bp('landscape')
+      font-size: 2.6rem
+      line-height: 3.4rem
+
+    @include bp('large')
+      font-size: 3rem
+      line-height: 4rem
 
   &__content
     font-size: 1.6rem
