--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -17,10 +17,14 @@
     @extend .common-header
     font-size: 2.2rem
     line-height: 2.6rem
+    margin-bottom: .3em
 
     @include bp('portrait')
       font-size: 3rem
       line-height: 3.6rem
+      margin-left: auto
+      margin-right: auto
+      text-align: center
 
     @include bp('landscape')
       font-size: 3.8rem
