increased left and right padding for CTA button for large breakpoint

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -235,5 +235,5 @@
     @include bp('large')
       font-size: 2.8rem
       line-height: 2.8rem
-      padding: 2.2rem
+      padding: 2.2rem 4.4rem
 
