--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -209,7 +209,7 @@
 
   &__link // https://stackoverflow.com/questions/17268051/sass-combining-parent-using-ampersand-with-base-element
     background-color: $color-main
-    border-radius: $common-spacing * 2
+    border-radius: 5rem
     color: $color-white
     display: inline-block
     font-size: 1.8rem
