ensuring that the portrait image is circular

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -147,7 +147,9 @@
         width: 50%
 
         @include bp('portrait')
-          width: 20rem
+          $size: 20rem
+          height: $size
+          width: $size
 
   &__quote
     background-color: $color-tertiary
