--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -26,6 +26,9 @@
     text-decoration: underline
     text-transform: capitalize
 
+  &__prison-name
+    font-weight: $font-weight-bold
+
   &__prison-name > a
     text-decoration: underline
 
