changed the background color of the body

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -13,7 +13,7 @@ button
   background: none
 
 body, html
-  background-color: $color-dark
+  background-color: $color-body
 
 .page-container
   background-color: $color-white
