--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -38,6 +38,7 @@ $color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
 $color-grey-medium: rgb(102,102,119)
 $color-dark: rgb(0,1,29)
+$color-body: #33334b
 $color-dark-transparent: rgba(0,0,0,0.85)
 $color-white: #fff
 $color-transparent: rgba(0,0,0,0)
