created breakpoint size variables for reuse elsewhere

--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -46,6 +46,10 @@ $color-nav-block: rgb(208, 234, 242)
 $color-gradient-dark: rgb(0,0,30)
 $color-gradient-light: rgb(51,51,75)
 
+$length-portrait: 768px
+$length-landscape: 1024px
+$length-large: 1440px
+
 // layout
 $common-spacing: 1.6rem
 
