--- a/web/app/themes/ppj/src/sass/breakpoints.scss
+++ b/web/app/themes/ppj/src/sass/breakpoints.scss
@@ -1,8 +1,7 @@
 $breakpoints: (
-  'portrait'  : ( min-width:  768px ),
-  'landscape' : ( min-width:  1024px ),
-  'large'     : ( min-width: 1440px ) // TODO revert - using smaller bp to make developing on smaller screen easier
-  //'large'     : ( min-width: 1200px )
+  'portrait'  : ( min-width: $length-portrait),
+  'landscape' : ( min-width: $length-landscape ),
+  'large'     : ( min-width: $length-large )
 );
 
 @mixin bp($name) {
@@ -14,7 +13,7 @@ $breakpoints: (
     }
   }
 
-    // If the key doesn't exist in the map
+  // If the key doesn't exist in the map
   @else {
     @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
 + "Please make sure it is defined in `$breakpoints` map.";
