--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -4,8 +4,8 @@
 @import '../css/reset.css'
 
 @import 'font-faces'
-@import 'breakpoints'
 @import 'variables'
+@import 'breakpoints'
 @import 'layout'
 
 // base reset
@@ -74,6 +74,10 @@ div
 h1,h2,h3,h4,h5,h6,
 p
   margin: 0 0 .65em 0
+
+body
+  margin: auto
+  max-width: $length-large
 
 img
   object-fit: cover
