increased size of top border for headers for breakpoint landscape and above

--- a/web/app/themes/ppj/src/sass/utilities/_top-border.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_top-border.sass
@@ -15,6 +15,9 @@
     margin-right: inherit
     width: 2.5em
 
+    @include bp('landscape')
+      width: 5em
+
     @include bp('portrait')
       border-top-color: $color-grey-medium
 
