--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -29,7 +29,8 @@ $font-size-enormous: 4.8rem
 $font-size-gigantic: 5.6rem
 
 // colors
-$color-main: rgb(30,147,189)
+$color-main: rgb(24,154,201)
+$color-main-shadow: rgb(19,138,185)
 $color-secondary: rgb(30,147,189)
 $color-tertiary: rgb(113,11,105)
 $color-extremely-light: rgb(240,240,240)
