--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -62,6 +62,16 @@
     height: 100%
     width: 100%
 
+    &:after
+      background: linear-gradient(60deg, rgba(0,0,0,0.7) 10%, $color-transparent 50%)
+      display: block
+      content: ''
+      position: absolute
+      top: 0
+      bottom: 0
+      left: 0
+      right: 0
+
     .slick-slider
       height: 100%
       margin-bottom: 0
