created highlighted text block
allows the background color to be different from the default

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -14,6 +14,14 @@
   .l-full &
     border-top: 1px solid $color-light
 
+  .l-full &--highlight
+    background-color: $color-section-highlight
+    border-top: 0
+    margin-left: 0
+    margin-right: 0
+    padding-bottom: $common-spacing * 2
+    width: 100%
+
   .page-blocks .l-full:first-child &
     border-top: none
     padding-top: 0
