--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -33,6 +33,7 @@ $color-main: rgb(24,154,201)
 $color-main-shadow: rgb(19,138,185)
 $color-secondary: rgb(30,147,189)
 $color-tertiary: rgb(113,11,105)
+$color-section-highlight: rgb(240,229,239)
 $color-extremely-light: rgb(240,240,240)
 $color-very-light: rgb(229,229,232)
 $color-light: rgb(204,204,204)
